# testrecog

./: ARCFACE_SETUP.txt  DEPTH_HARDENING_PLAN.txt  IDENTIFICATION_SETUP.txt  README.md  REGISTRATION_GUIDE.txt  REPAIR_INSTRUCTIONS.txt  app.py  body_reid.py  config.json  config.py  config.txt  export_quantized.py  face_reid.py  laptop_viewer.py  main_loop.py  motor_control.py  occupancy_map.py  osnet_x0_25_msmt17.onnx  persons.json  pose_reid.py  register_person.py  register_person_auto.py  register_visual.py  registration.py  requirements.txt  setup.sh  test_cam.py  tracker.py
cpp/: CMakeLists.txt  build.sh
cpp/include/: depth_processor.hpp  face_recognizer.hpp  logger.hpp  motor_controller.hpp  vision_engine.hpp
cpp/src/: depth_processor.cpp  logger.cpp  main.cpp  main_new.cpp  vision_engine.cpp  vision_server.cpp
data/persons/: registry.json
docs/: BUILD_GUIDE.md  QUICK_START.md
python/: ai_chat.py  config.py  deep_face_recognizer.py  face_recognizer.py  logger_config.py  main.py  motor_bridge.py  motor_control.py  person_registry.py  recognition_service.py  test_camera.py  test_depth.py  test_recognition.py  tts.py  vision_bridge.py  vision_server.cpp  vision_server_standalone.py  voice.py  yolo_face_recognizer.py
python/Log/: OrbbecSDK.log.txt
python/templates/: index.html
static/: scripts.js  style.css
templates/: index.html
yolov8n-pose_int8_openvino_model/: metadata.yaml  yolov8n-pose.xml
yolov8n-pose_openvino_model/: metadata.yaml  yolov8n-pose.xml
yolov8n_int8_openvino_model/: metadata.yaml  yolov8n.xml
yolov8n_openvino_model/: metadata.yaml
